--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@capacitor/core": "7.4.3",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
+    "@capacitor/ios": "^7.4.4",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/local-notifications": "^7.0.3",
     "@capacitor/push-notifications": "^7.0.3",
     "@capacitor/share": "^7.0.2",
+    "@capacitor/splash-screen": "^7.0.4",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage": "^4.0.0",
